--- a/wp-content/themes/portfolio/assets/scss/portfolio.css
+++ b/wp-content/themes/portfolio/assets/scss/portfolio.css
@@ -249,7 +249,7 @@ header .logo .logo-img {
   .carousel-dev .contenedor-carousel-dev .head-carousel {
     height: 36px;
     background-color: lightgray;
-    position: absolute;
+    /*position: absolute;*/
     top: 0;
     width: 100%;
     box-shadow: 0px 1px 2px #959494;
@@ -270,7 +270,7 @@ header .logo .logo-img {
     .carousel-dev .contenedor-carousel-dev .head-carousel .dot-3 {
       background-color: #34945e; }
   .carousel-dev .contenedor-carousel-dev .owl-stage-outer {
-    border-radius: 10px; }
+    border-radius: 0 0 10px 10px; }
     .carousel-dev .contenedor-carousel-dev .owl-stage-outer .sitio {
       height: 230px;
       background-size: cover;
